<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tiled_background_pub"
    android:padding="30dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/noAuthTokenTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_no_ebay_auth"
            android:textColor="@color/grey_dark_font"
            android:textSize="17sp" />

        <CheckBox
            android:id="@+id/showAgainCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/title_dont_show_this_again"
            android:textColor="@color/grey_dark_font"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/noThanksBtn"
                android:layout_width="0dip"
                android:layout_height="36dp"
                android:layout_weight="0.1"
                android:background="@drawable/btn1_selector"
                android:text="@string/title_no_thanks"
                android:textColor="@color/light_font"
                android:textSize="16sp" />

            <Button
                android:id="@+id/setNowBtn"
                android:layout_width="0dip"
                android:layout_height="36dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.1"
                android:background="@drawable/btn1_selector"
                android:text="@string/title_set_now"
                android:textColor="@color/light_font"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>