<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/app"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="#ffffff" >

        <Button
            android:id="@+id/backBut"
            style="@style/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:background="#ffffff"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/icon_back"
            android:textColor="#0B840A"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_price_pref"
            android:textColor="#0B840A"
            android:textSize="20sp"
            android:textStyle="bold" />
    </FrameLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffffff"
        android:padding="20dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_price_pref_desc"
            android:textColor="@color/dark_font"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/title_price_pref1"
            android:textColor="@color/dark_font"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/contentEt"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginTop="5dp"
            android:layout_weight="0.1"
            android:background="@drawable/round_textarea_input"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:padding="5dp"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:textColor="@color/dark_font"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingLeft="50dp"
            android:paddingRight="50dp" >

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/btn1_selector"
                android:gravity="center"
                android:singleLine="false"
                android:text="@string/title_submit_btn"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>