<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff" >

    <FrameLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/action_bar_background"
        android:paddingBottom="8dp"
        android:paddingTop="8dp" >

        <Button
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:layout_marginRight="10dp"
            android:background="#0fff"
            android:minHeight="20dp"
            android:minWidth="20dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/icon_back"
            android:textColor="#ffffff"
            android:textSize="26sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/title_listing_setting"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/defaultTemplateLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/listitem_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/iconDefaultTemplate"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="@string/icon_default_template"
            android:textColor="@color/grey_font"
            android:textSize="18sp" >
        </TextView>

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.1"
            android:gravity="center_vertical"
            android:text="@string/title_default_template"
            android:textColor="@color/grey_dark_font"
            android:textSize="18sp" >
        </TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:scaleType="fitCenter"
            android:shadowDx="-1"
            android:shadowDy="-1"
            android:shadowRadius="1"
            android:src="@drawable/chevron" >
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/templateActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:visibility="gone" >

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="0.1" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@drawable/btn1_selector"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/title_save"
            android:textColor="@color/light_font"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/listitem_divider_color2" />

    <LinearLayout
        android:id="@+id/generalCondLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/listitem_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/iconGeneralCond"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="@string/icon_general_cond"
            android:textColor="@color/grey_font"
            android:textSize="18sp" >
        </TextView>

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.1"
            android:gravity="center_vertical"
            android:text="@string/title_general_cond"
            android:textColor="@color/grey_dark_font"
            android:textSize="18sp" >
        </TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:scaleType="fitCenter"
            android:shadowDx="-1"
            android:shadowDy="-1"
            android:shadowRadius="1"
            android:src="@drawable/chevron" >
        </ImageView>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/listitem_divider_color2" />

    <LinearLayout
        android:id="@+id/pricePrefLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/listitem_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/iconPricePref"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="@string/icon_price_pref"
            android:textColor="@color/grey_font"
            android:textSize="18sp" >
        </TextView>

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.1"
            android:gravity="center_vertical"
            android:text="@string/title_price_pref"
            android:textColor="@color/grey_dark_font"
            android:textSize="18sp" >
        </TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:scaleType="fitCenter"
            android:shadowDx="-1"
            android:shadowDy="-1"
            android:shadowRadius="1"
            android:src="@drawable/chevron" >
        </ImageView>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/listitem_divider_color2" />

    <LinearLayout
        android:id="@+id/listingPrefLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/listitem_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/iconListingPref"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="@string/icon_listing_pref"
            android:textColor="@color/grey_font"
            android:textSize="18sp" >
        </TextView>

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.1"
            android:gravity="center_vertical"
            android:text="@string/title_listing_pref"
            android:textColor="@color/grey_dark_font"
            android:textSize="18sp" >
        </TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:scaleType="fitCenter"
            android:shadowDx="-1"
            android:shadowDy="-1"
            android:shadowRadius="1"
            android:src="@drawable/chevron" >
        </ImageView>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/listitem_divider_color2" />

</LinearLayout>